# dla-bracis

./: .coverage  .coveragerc  .coveragerc.80  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  extensions.py  pyproject.toml  pytest.ini  requirements.txt
docs/: article.tex  references.bib
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: runtime-config.js
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/contexts/: AlertConfirmContext.tsx  Authentication.tsx  LayoutContext.tsx  SelectedClass.tsx
frontend/src/hooks/: index.ts  (+4 more)
monitoring/: README.md  prometheus.yml
monitoring/grafana/: dashboards-provider.yml  dashboards.yml  datasources.yml
scripts/: init_db.py  migrate_objectids.py  run_tests.sh  run_tests_coverage_80.sh
src/: __init__.py  main.py
src/application/: __init__.py
src/domain/: __init__.py  exceptions.py
src/infrastructure/: __init__.py  health.py
src/presentation/: __init__.py  exception_mapper.py
src/shared/: __init__.py  date_utils.py  logger.py  submission_utils.py
src/tests/: __init__.py  conftest.py  test_application_exercises.py  test_celery_task_status.py  test_domain_evaluation.py  test_domain_exceptions.py  test_dto.py  test_dto_extended.py  test_infrastructure_cache.py  test_infrastructure_health.py  test_reports_service.py  test_routes.py  test_schemas_extended.py  test_segmentation.py  test_services.py
(+270 files in other folders)
